# vecs

./: .gitignore  README.md  pyproject.toml
docs/plans/: 2026-03-03-vecs-design.md  2026-03-03-vecs-implementation.md  2026-03-03-vecs-v2-design.md  2026-03-03-vecs-v2-implementation.md
src/vecs/: __init__.py  ast_chunker.py  bm25_index.py  chunkers.py  cli.py  clients.py  config.py  indexer.py  mcp_server.py  searcher.py
tests/: test_ast_chunker.py  test_bm25.py  test_cache.py  test_chunkers.py  test_config.py  test_searcher.py  test_session_chunker.py
