[project]
name = "vecs"
version = "0.1.0"
description = "Semantic search for Bloomly code and Claude Code sessions"
requires-python = ">=3.12"
dependencies = [
    "voyageai>=0.3",
    "chromadb>=1.0",
    "click>=8.0",
    "mcp[cli]>=1.2",
]

[project.scripts]
vecs = "vecs.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
